# airas-20251118-081912-matsuzawa

./: README.md  output.txt  pyproject.toml
.research/: research_history.json
.research/iteration1/: stderr.txt  stdout.txt
.research/iteration1/comparative-1-iter1-Qwen3-0.6B-gsm8k/: metrics.json
.research/iteration1/comparison/: aggregated_metrics.json  ttest.json
.research/iteration1/proposed-iter1-Qwen3-0.6B-gsm8k/: metrics.json
.research/latex/iclr2024/: .chktexrc  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
branches/main/: index.html
config/: config.yaml
config/run/: comparative-1-iter1-Qwen3-0.6B-gsm8k.yaml  proposed-iter1-Qwen3-0.6B-gsm8k.yaml
config/runs/: comparative-1-iter1-Qwen3-0.6B-gsm8k.yaml  proposed-iter1-Qwen3-0.6B-gsm8k.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
